<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

 <EditText
     android:id="@+id/editTextTextPersonName"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="false"
     android:cursorVisible="false"
     android:ems="10"
     android:inputType="textPersonName"
     android:text="Spaulding BLE MFM App" />

 <Button
     android:id="@+id/start_button"
     android:text="@string/Start"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAllCaps="false"
     android:enabled="true"
     android:onClick="startBluetooth"
     />

 <Button
     android:id="@+id/search_button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:enabled="false"
     android:onClick="searchBluetooth"
     android:text="@string/Search"
     android:textAllCaps="false" />

 <Button
     android:id="@+id/connect_button"
     android:text="@string/Connect"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAllCaps="false"
     android:enabled="false"
     android:onClick="connectBluetooth"
     />

 <Button
     android:id="@+id/discoverSvc_button"
     android:text= "@string/DiscoverServices"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAllCaps="false"
     android:enabled="false"
     android:onClick="discoverServices"
     />

 <Button
     android:id="@+id/disconnect_button"
     android:text="@string/Disconnect"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAllCaps="false"
     android:enabled="false"
     android:onClick="Disconnect"
     />


 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/activity_horizontal_margin"
     />
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/activity_horizontal_margin"
     />

 <TextView
     android:id="@+id/textView3"
     android:layout_width="380dp"
     android:layout_height="wrap_content"
     android:text="Device Name:" />

 <TextView
     android:id="@+id/uuid_label"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />

 <LinearLayout
     android:layout_width="342dp"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:orientation="horizontal">

  <TextView
      android:id="@+id/C1Slider"
      android:layout_width="64dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="Frequency:"
      android:textSize="18sp" />

  <TextView
      android:id="@+id/frequency_disp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1" />


 </LinearLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="2dp"
     android:orientation="horizontal">


  <ToggleButton
      android:id="@+id/Logger"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:checked="true"
      android:text="Logger"
      android:textOff="Stop Logger"
      android:textOn="Start Logger" />

 </LinearLayout>



</LinearLayout>